# auth-microservice

./: .gitignore  Makefile  pyproject.toml
docker_compose/: app.yaml  auth-service-storages.yaml  auth-service.yaml  storages.yaml
keys.example/: private.pem.example
src/application/api/: main.py
src/application/api/auth/: handlers.py  schemas.py
src/application/external_events/handlers/: users.py
src/domain/commands/: users.py
src/domain/entities/: base.py  tokens.py  users.py
src/domain/events/: users.py
src/domain/exceptions/: users.py
src/domain/value_objects/: users.py
src/infrastructure/: database.py
src/infrastructure/auth/: jwt.py  security.py
src/infrastructure/converters/: users.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 9c3f793af78b_.py  c3de9fd1fb90_.py  d8912112fd9b_.py
src/infrastructure/models/: users.py
src/infrastructure/repositories/users/: base.py  postgresql.py
src/infrastrusture/: models.py
src/infrastrusture/brokers/: base.py  rabbitmq.py
src/infrastrusture/repositories/: base.py  mongodb.py
src/infrastrusture/security/: crypt.py  jwt.py
src/service/: container.py  message_bus.py
src/service/handlers/command/: users.py
src/service/handlers/event/: users.py
src/service/units_of_work/users/: base.py  postgresql.py
src/settings/: config.py  container.py
